--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -8,6 +8,16 @@
         const telegramUserId = webApp.initDataUnsafe.user.id;
         const localStorageKey = 'AreTheUserJoinToTheChannel';
 
+        // Helper function to reload the page without caching
+        function nonCachedReload() {
+            // Create a new URL object from the current location
+            const url = new URL(window.location.href);
+            // Update or add a cache-busting query parameter
+            url.searchParams.set('cb', Date.now());
+            // Redirect to the new URL
+            window.location.href = url.toString();
+        }
+
         try {
             const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
                 method: 'POST',
@@ -26,7 +36,8 @@
                 document.body.innerHTML = `
                     <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
                         <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
-                            <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">لست منضماً إلى القناة.<br>
+                            <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">
+                                لست منضماً إلى القناة.<br>
                                 <span style="font-size: 26px; font-weight: bold; color: #ffffff;">الرجاء الانضمام</span>
                                 <a href="https://t.me/DCRef_Channel" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 20px; font-weight: bold;">من هنا</a>
                             </h1>
@@ -36,9 +47,7 @@
                         </div>
                     </div>
                 `;
-                document.getElementById('retryButton').addEventListener('click', () => {
-                    window.location.reload();
-                });
+                document.getElementById('retryButton').addEventListener('click', nonCachedReload);
             }
         } catch (error) {
             console.error("Error during validation:", error);
@@ -55,9 +64,7 @@
                     </div>
                 </div>
             `;
-            document.getElementById('retryButton').addEventListener('click', () => {
-                window.location.reload();
-            });
+            document.getElementById('retryButton').addEventListener('click', nonCachedReload);
         }
     });
 </script>    
