--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3032,12 +3032,13 @@
                             {{ episodeTitleHeader }}
                             <br />
                             <span v-if="isAnyFilterActive" @click="openEmptyPopup" class="text-base text-black cursor-pointer">
-                            ~ (التصفية قيد التشغيل حالياً) ~
-                            </span> <br />
+                                ~ (التصفية قيد التشغيل حالياً) ~
+                            </span>
+                            <br v-if="isAnyFilterActive" />
                             <span class="text-base text-white">
                                 (اضغط فوق أي عنوان حلقة لفتح بياناتها)
                             </span>
-                        </th>                          
+                        </th>                                                  
                     </tr>
                 </thead>
 
