--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3035,10 +3035,10 @@
                                 ~ (التصفية قيد التشغيل حالياً) ~
                             </span>
                             <br v-if="isAnyFilterActive" />
-                            <span class="text-base text-white">
+                            <span :class="['text-base', isAnyFilterActive ? 'text-white' : 'text-red-600']">
                                 (اضغط فوق أي عنوان حلقة لفتح بياناتها)
                             </span>
-                        </th>                                                  
+                        </th>                                                                          
                     </tr>
                 </thead>
 
