--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4627,7 +4627,7 @@
                             </span>
                             <br v-if="isAnyFilterActive" />
                             <span :class="['text-base', isAnyFilterActive ? 'text-white' : 'text-red-600']">
-                                اضغط فوق أي عنوان حلقة لفتح بياناتها
+                                انقر على أي عنوان لعرض تفاصيله
                             </span>
                         </th>                                                                          
                     </tr>
