--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13437,32 +13437,40 @@
                     }
                 },
 
-                    async sendEpisodeToBot(videoID, resolution, index) {
+                async sendEpisodeToBot(videoID, resolution, index) {
                     if (!this.selectedEpisode.EpisodeNumber) {
                         return;
                     }
 
                     const token = '7518282241:AAF06PXBA0a0kY2z-Sh7Wm4kj9_kkyRRFk8';
                     const chatId = localStorage.getItem('AreTheUserJoinToTheChannel');
-                    console.log (chatId);
+                    console.log(chatId);
                     const caption = `*رقم الحلقة: ${this.selectedEpisode.EpisodeNumber} (${resolution})*`;
 
+                    // Set the status to 'sending'
                     this.selectedEpisode.EpisodeVideosIDs[index].status = 'sending';
 
                     try {
                         await this.sendVideoResponse(chatId, videoID, caption, token);
                         this.selectedEpisode.EpisodeVideosIDs[index].status = 'success';
+                        // Clear any previous error message on success
+                        this.errorMessage = "";
                     } catch (error) {
                         this.selectedEpisode.EpisodeVideosIDs[index].status = 'error';
-                        // Skip timeout reset if the error popup is active
+                        // Save the error message from Telegram for display in the error popup
+                        this.errorMessage = error.message;
+                        // If an error popup is active, skip further processing
                         if (this.selectedEpisode.EpisodeVideosIDs.some((video) => video.status === "error")) {
                             return; // Exit early if error popup is shown
                         }
                     }
+
+                    // Reset the status after a delay (if needed)
                     setTimeout(() => {
                         this.selectedEpisode.EpisodeVideosIDs[index].status = null;
                     }, 5000);
                 },
+
                 async sendVideoResponse(chatId, fileId, caption, token) {
                     const url = `https://api.telegram.org/bot${token}/sendVideo`;
                     const body = {
@@ -13481,8 +13489,12 @@
                         body: JSON.stringify(body),
                     });
 
-                    if (!response.ok) {
-                        throw new Error(`Failed to send video: ${response.statusText}`);
+                    // Parse the JSON response
+                    const data = await response.json();
+
+                    // Throw an error with Telegram's description if available
+                    if (!data.ok) {
+                        throw new Error(data.description || response.statusText);
                     }
                 },
 
