--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4759,7 +4759,7 @@
                                     <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col">
                                         <!-- Sticky Header Section -->
                                         <div class="sticky top-0 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
-                                        <h2 class="text-2xl text-red-500 font-bold text-center">حدث خطأ</h2>
+                                        <h2 class="text-2xl text-red-500 font-bold text-center">{{ errorMessage }}</h2>
                                         </div>
 
                                         <!-- Scrollable Content -->
@@ -4773,9 +4773,9 @@
                                             class="mb-4 w-full rounded"
                                         />
                                         <!-- Display Telegram's error message -->
-                                        <p v-if="errorMessage" class="text-lg text-white text-center font-bold mt-4">
+                                        <!-- <p v-if="errorMessage" class="text-lg text-white text-center font-bold mt-4">
                                             {{ errorMessage }}
-                                        </p>
+                                        </p> -->
                                         <p class="text-lg text-white font-bold text-center mt-4">
                                             إذا لم يظهر لك الزر، فهذا يعني أنك مشترك بالفعل في البوت.
                                         </p>
