--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4485,12 +4485,12 @@
             <!-- Announcement Box -->
             <div class="relative w-full max-w-2xl p-4 mt-4 bg-black bg-opacity-85 rounded-lg shadow-lg border border-yellow-500 animate-borderMove">
                 <p class="text-white text-xl text-center font-bold">تم إضافة حلقة الأسبوع ({{ ep }})</p>
-                <!-- <button 
+                <button 
                     v-if="episodes && episodes.length > 0"
-                    @click="openModal(ep)" 
+                    @click="openEpisodeModal(ep)"
                     class="mt-4 w-full py-2 bg-teal-600 text-white font-bold text-lg rounded hover:bg-teal-500 transition-transform transform hover:scale-105 animate-bounce">
                     أضغط هنا لفتح الحلقة
-                </button> -->
+                </button>
             </div>
 
                         <!-- Centered Description Box for Colors and Their Names with "معاني الألوان" Legend -->
@@ -13660,8 +13660,19 @@
                     }
                 },
 
-                getEpisodeByNumber(epNumber) {
-                    return this.episodes.find(e => e.EpisodeNumber === epNumber);
+                    openEpisodeModal(episodeNumber) {
+                    if (!this.episodes || this.episodes.length === 0) {
+                        console.log('Episodes data is not loaded yet!');
+                        return; // Exit early if episodes data is not loaded
+                    }
+
+                    const episode = this.episodes.find(ep => ep.EpisodeNumber === episodeNumber);
+
+                    if (episode) {
+                        this.openModal(episode); // Open the modal for the found episode OBJECT
+                    } else {
+                        console.log("Episode not found in episodes array!");
+                    }
                 },
             },
             
