--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -464,9 +464,9 @@
                         <!-- User Guide Section -->
                         <div class="bg-gray-800 text-white p-4 rounded mb-4">
                             <h3 class="text-lg font-bold mb-2">الشرح التوضيحي</h3>
-                            <ul class="list-disc pl-5 text-sm">
-                                <li>استخدم الفلاتر الموجودة في الأسفل لتحديد المحتوى الذي ترغب في عرضه وتقييده داخل الجدول.</li>
-                                <li>لعرض نتائج التصفية، انتقل إلى الجدول عن طريق إغلاق هذه النافذة بالضغط على زر الإغلاق (الزر الأحمر) في الزاوية العلوية اليسرى.</li>
+                            <ul class="list-disc pl-5 text-base">
+                                <li class="mb-2">استخدم الفلاتر الموجودة في الأسفل لتحديد المحتوى الذي ترغب في عرضه وتقييده داخل الجدول.</li>
+                                <li class="mb-2">لعرض نتائج التصفية، انتقل إلى الجدول عن طريق إغلاق هذه النافذة بالضغط على زر الإغلاق (الزر الأحمر) في الزاوية العلوية اليسرى.</li>
                                 <li>لإعادة التصفية إلى الوضع الافتراضي، اضغط على زر إعادة التعيين (الزر البرتقالي) في الزاوية العلوية اليسرى.</li>                                
                             </ul>
                         </div>
