--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4725,7 +4725,7 @@
                         </div>                          
                             
                             <!-- Scrollable Content -->
-                            <div class="overflow-y-auto p-4 flex-1">
+                            <div class="overflow-y-auto p-4 flex-1 always-visible-scrollbar">
 
                                 <h2 class="text-xl font-bold mb-4 overflow-hidden text-ellipsis" v-if="selectedEpisode">
                                     {{ selectedEpisode.EpisodeTitle }}
