--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4761,16 +4761,16 @@
                                     <span v-else>لايوجد</span>
                                 </p>
 
-                                <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0" class="border p-2 rounded mb-2">
+                                <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeMangaQuoted !== ''" class="border p-2 rounded mb-2">
                                     <legend class="font-bold text-lg">
-                                        <p v-if="selectedEpisode && selectedEpisode.EpisodeMangaQuoted !== ''">
+                                        <p v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs !== ''">
                                         <span dir="ltr">:الفصول المقتبسة</span> {{ selectedEpisode.EpisodeMangaQuoted }}
                                         </p>
-                                        <template v-else>
-                                        قراءة الفصول (عبر البوت)
-                                        </template>
+                                        <p v-else>
+                                            <span dir="ltr">:قراءة الفصول (عبر البوت)</span> {{ selectedEpisode.EpisodeMangaQuoted }}
+                                        </p>
                                     </legend>
-                                    <div class="flex flex-col justify-center gap-4">
+                                    <div v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0" class="flex flex-col justify-center gap-4">
                                         <div 
                                             v-for="(manga, index) in selectedEpisode.EpisodeMangasIDs" 
                                             :key="manga.MangaNumber" 
@@ -5067,6 +5067,8 @@
                     "أ": ["ا","إ","أ"],
                     "ا": ["أ","إ","ا"],
                     "إ": ["أ","ا","إ"],
+                    "س": ["ش","س"],
+                    "ش": ["س","ش"],
                     },
                     jsonUrl: "https://enc.mdccxxixix.workers.dev/",
                     showTooltip: false,
