--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4761,39 +4761,39 @@
                                     <span v-else>لايوجد</span>
                                 </p>
 
-                                <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeMangaQuoted !== ''" class="border p-2 rounded mb-2">
-                                    <legend class="font-bold text-lg">
-                                        <p v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs !== ''">
-                                        <span dir="ltr">:الفصول المقتبسة</span> {{ selectedEpisode.EpisodeMangaQuoted }}
+                                <div>
+                                    <p v-if="selectedEpisode && !selectedEpisode.EpisodeMangasIDs">
+                                      <span dir="ltr">:الفصول المقتبسة</span> {{ selectedEpisode.EpisodeMangaQuoted }}
+                                    </p>
+                                    <fieldset v-else-if="selectedEpisode && selectedEpisode.EpisodeMangaQuoted !== ''" class="border p-2 rounded mb-2">
+                                      <legend class="font-bold text-lg">
+                                        <p v-if="selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0">
+                                          <span dir="ltr">:الفصول المقتبسة</span> {{ selectedEpisode.EpisodeMangaQuoted }}
                                         </p>
                                         <p v-else>
-                                            <span dir="ltr">:قراءة الفصول (عبر البوت)</span> {{ selectedEpisode.EpisodeMangaQuoted }}
+                                          <span dir="ltr">:قراءة الفصول (عبر البوت)</span> {{ selectedEpisode.EpisodeMangaQuoted }}
                                         </p>
-                                    </legend>
-                                    <div v-if="selectedEpisode && selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0" class="flex flex-col justify-center gap-4">
-                                        <div 
-                                            v-for="(manga, index) in selectedEpisode.EpisodeMangasIDs" 
-                                            :key="manga.MangaNumber" 
-                                            class="relative flex flex-col gap-4">
-                                            <button
-                                                :disabled="manga.status === 'success'"
-                                                @click="() => { sendMangaToBot(manga.MangaFileID, manga.MangaNumber, index); }"
-                                                class="bg-green-500 text-white px-6 py-2 rounded hover:bg-green-700 flex items-center justify-center shadow-md disabled:opacity-50">
-                                                ({{ manga.MangaFileSize }}MB) {{ manga.MangaNumber }}
-                                            </button>
-                                            <img 
-                                                v-if="manga.status === 'success'" 
-                                                src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png"
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2"
-                                            />
-                                            <img 
-                                                v-if="manga.status === 'error'" 
-                                                src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png"
-                                                class="absolute right-0 top-0 w-6 h-6 ml-2"
-                                            />
+                                      </legend>
+                                      <div v-if="selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0" class="flex flex-col justify-center gap-4">
+                                        <div v-for="(manga, index) in selectedEpisode.EpisodeMangasIDs" :key="manga.MangaNumber" class="relative flex flex-col gap-4">
+                                          <button
+                                            :disabled="manga.status === 'success'"
+                                            @click="() => { sendMangaToBot(manga.MangaFileID, manga.MangaNumber, index); }"
+                                            class="bg-green-500 text-white px-6 py-2 rounded hover:bg-green-700 flex items-center justify-center shadow-md disabled:opacity-50">
+                                            ({{ manga.MangaFileSize }}MB) {{ manga.MangaNumber }}
+                                          </button>
+                                          <img 
+                                            v-if="manga.status === 'success'" 
+                                            src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/true.png"
+                                            class="absolute right-0 top-0 w-6 h-6 ml-2"/>
+                                          <img 
+                                            v-if="manga.status === 'error'" 
+                                            src="https://raw.githubusercontent.com/c7bb/6Y9/main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png"
+                                            class="absolute right-0 top-0 w-6 h-6 ml-2"/>
                                         </div>
-                                    </div>
-                                </fieldset>
+                                      </div>
+                                    </fieldset>
+                                </div>
 
                                 <div  
                                     v-if="(selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'error')) || (selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'error'))"
