--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4963,8 +4963,8 @@
                                 </fieldset>
 
                                 <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeSummary !== ''" class="border p-2 border-orange-400 rounded mb-2">
-                                    <legend class="font-bold cursor-pointer" @click="toggleSpoiler">
-                                        <span class="text-lg animate-bounce">
+                                    <legend class="font-bold cursor-pointer animate-bounce" @click="toggleSpoiler">
+                                        <span class="text-lg">
                                             <span v-html="highlightSpoilerText()"></span>
                                         </span>
                                     </legend>
