--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4762,19 +4762,19 @@
                                 </p>
 
                                 <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeMangaQuoted !== ''" class="border p-2 rounded mb-2">
-                                    <template v-if="selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0">
-                                      <legend class="font-bold text-lg">
-                                        <p>
-                                          <span dir="ltr">:قراءة الفصول (عبر البوت)</span> {{ selectedEpisode.EpisodeMangaQuoted }}
-                                        </p>
-                                      </legend>
-                                    </template>
-                                    <template v-else>
+                                    <!-- Show legend only if EpisodeMangasIDs exists and is not empty -->
+                                    <legend v-if="selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0" class="font-bold text-lg">
                                       <p>
-                                        <span dir="ltr">:الفصول المقتبسة</span> {{ selectedEpisode.EpisodeMangaQuoted }}
+                                        <span dir="ltr">:قراءة الفصول (عبر البوت)</span> {{ selectedEpisode.EpisodeMangaQuoted }}
                                       </p>
-                                    </template>
+                                    </legend>
                                   
+                                    <!-- If EpisodeMangasIDs is empty/null, only show the text -->
+                                    <p v-else>
+                                      <span dir="ltr">:الفصول المقتبسة</span> {{ selectedEpisode.EpisodeMangaQuoted }}
+                                    </p>
+                                  
+                                    <!-- Manga download buttons -->
                                     <div v-if="selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0" class="flex flex-col justify-center gap-4">
                                       <div 
                                         v-for="(manga, index) in selectedEpisode.EpisodeMangasIDs" 
@@ -4784,7 +4784,7 @@
                                           :disabled="manga.status === 'success'"
                                           @click="() => { sendMangaToBot(manga.MangaFileID, manga.MangaNumber, index); }"
                                           class="bg-green-500 text-white px-6 py-2 rounded hover:bg-green-700 flex items-center justify-center shadow-md disabled:opacity-50">
-                                          ({{ `MB ${manga.MangaFileSize}` }}) {{ manga.MangaNumber }}
+                                          ({{ manga.MangaFileSize }}&nbsp;MB) {{ manga.MangaNumber }}
                                         </button>
                                         <img 
                                           v-if="manga.status === 'success'" 
@@ -4798,7 +4798,7 @@
                                         />
                                       </div>
                                     </div>
-                                </fieldset>                                  
+                                </fieldset>                                                                    
 
                                 <div  
                                     v-if="(selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'error')) || (selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'error'))"
