--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4761,7 +4761,7 @@
                                     <span v-else>لايوجد</span>
                                 </p>
 
-                                <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeMangaQuoted !== ''" class="border p-2 rounded mb-2">
+                                <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeMangaQuoted !== ''" class="mb-2 text-lg">
                                     <!-- Show legend only if EpisodeMangasIDs exists and is not empty -->
                                     <legend v-if="selectedEpisode.EpisodeMangasIDs && selectedEpisode.EpisodeMangasIDs.length > 0" class="font-bold text-lg">
                                       <p>
